Adjusted links - Replaced twitter with linkedin - Reordered links - Open links in new tabs

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             </div>
             <div class="social">
                 <div class="icon">
-                    <a href="https://twitter.com/jonaswehpunkt"><i class="fab fa-twitter"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/jonas-winter-bb50771a3/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 
                 <div class="icon">
-                    <a href="https://github.com/JonasWinter"><i class="fab fa-github"></i></a>
-                </div>
-                
-                <div class="icon">
-                    <a href="https://www.xing.com/profile/Jonas_Winter23/"><i class="fab fa-xing"></i></a>
+                    <a target="_blank" href="https://www.xing.com/profile/Jonas_Winter23/"><i class="fab fa-xing"></i></a>
                 </div>
 
                 <div class="icon">
-                    <a href="mailto:jonas.winter@stud.tu-darmstadt.de"><i class="fas fa-envelope"></i></a>
+                    <a target="_blank" href="https://github.com/JonasWinter"><i class="fab fa-github"></i></a>
+                </div>
+
+                <div class="icon">
+                    <a target="_blank" href="mailto:jonas.winter@stud.tu-darmstadt.de"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
