Updated URL to LinkedIn Profile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="social">
                 <div class="icon">
-                    <a target="_blank" href="https://www.linkedin.com/in/jonas-winter-bb50771a3/"><i
+                    <a target="_blank" href="https://www.linkedin.com/in/jonaswinter/"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
 
