Updated current position and employer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <div class="profile">
                 <div class="name">Jonas Winter</div>
                 <div class="desc">
-                    <p>Associate Cybersecurity & Privacy</p>
-                    <p>PricewaterhouseCoopers</p>
+                    <p>IT Architect @ BCG Platinion</p>
                 </div>
             </div>
             <div class="social">
