--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 
     <title>Jonas Winter</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -48,17 +47,12 @@
             </div>
         </div>
     </div>
-    <script>
-        window.onload = (event) => {
-            var backgroundImage = "url('/img/background.jpg')";
-            sleep(1000).then(() => {
-                document.body.style.backgroundImage = backgroundImage;
-            });
-        };
-
-        function sleep(time) {
-            return new Promise((resolve) => setTimeout(resolve, time));
+    <script>       
+        var backgroundImage = new Image();
+        backgroundImage.onload = function() {
+            document.body.style.backgroundImage = "url(" + backgroundImage.src +")";
         }
+        backgroundImage.src = "/img/background.jpg";
     </script>
 </body>
 
